Refactor trip expense API to return categorized expense lists